Refactored code for extraction of filename from url.